--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -18,10 +18,10 @@
 
 @media screen and (min-width: 1024px) {
   .posts-grid {
-    grid-template-columns: 1fr 1fr 1fr;
+    grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
     grid-template-areas:
-      'first first first'
-      'second third third';
+      'first first first first first first'
+      'second second second third third third';
   }
 
   .posts-grid > article:nth-child(2) {
@@ -30,6 +30,10 @@
 
   .posts-grid > article:nth-child(3) {
     grid-area: third;
+  }
+
+  .posts-grid > article:nth-child(n + 4) {
+    grid-column: span 2;
   }
 }
 
